# sharp2_SmartSpeaker

./: .gitignore  CLAUDE.md  Cargo.toml  run.bat  sakura.rpw  start.bat
.cargo/: config.toml
.claude/: settings.local.json
config/: settings.toml
docs/: debug-session-2026-01-30.md  debug-session-2026-01-31.md  rustpotter_tuning.md  whisper_tuning.md
src/: config.rs  main.rs
src/audio/: capture.rs  mod.rs  playback.rs
src/llm/: ollama.rs
src/stt/: mod.rs  whisper.rs
src/tts/: mod.rs  voicevox.rs
src/wakeword/: detector.rs  mod.rs
